Complete the full text

--- a/afkortingen.tex
+++ b/afkortingen.tex
@@ -5,11 +5,15 @@
 \begin{table}[ht]
 % https://nl.wikibooks.org/wiki/LaTeX/Tabellen
 \small
-\begin{tabular}{ll} 
-AM &Amplitudemodulatie (Amplitude Modulation) \\
-DSN &Deep Space Network\\
-FM &Frequentiemodulatie (Frequency Modulation) \\
-NASA &National Aeronautics and Space Administration \\
+\begin{tabular}{ll}
+% AM &Amplitudemodulatie (Amplitude Modulation) \\
+% DSN &Deep Space Network\\
+% FM &Frequentiemodulatie (Frequency Modulation) \\
+% NASA &National Aeronautics and Space Administration \\
+CNN & Convolutional Neural Network \\
+DFT	& Discrete Fourier Transform \\
+FFT & Fast Fourier Transform \\
+ReLU & Rectified Linear Unit \\
 \end{tabular}
 \end{table}
 
