--- a/bronnen.bib
+++ b/bronnen.bib
@@ -60,6 +60,14 @@
   note         = {[Online; accessed 17-April-2021]}
 }
 
+@misc{enwiki:q-format,
+  author       = {{Wikipedia contributors}},
+  title        = {Q (number format) --- {Wikipedia}{,} The Free Encyclopedia},
+  year         = {2021},
+  howpublished = {\url{https://en.wikipedia.org/w/index.php?title=Q_(number_format)&oldid=1011412322}},
+  note         = {[Online; accessed 18-April-2021]}
+}
+
 @inproceedings{IEEE:very-deep-cnn-raw-waveforms,
   author    = {Dai, W and Dai, C and Qu, S and Li, J and Das, S},
   booktitle = {2017 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
